# glmnetpp

./: .gitignore  README.md
glmnetpp/: CMakeLists.txt
glmnetpp/benchmark/: CMakeLists.txt  lasso_stress_benchmark.cpp
glmnetpp/benchmark/analyze/: analyze.py  analyze_lasso_stress_benchmark.py  analyze_set_vs_vector_loop.py
glmnetpp/benchmark/micro/: set_vs_vector_loop.cpp
glmnetpp/benchmark/reference/: lasso_stress_benchmark.R  lasso_stress_benchmark.py
glmnetpp/docs/data/: lasso_stress_benchmark.csv  set_vs_vector_loop.csv
glmnetpp/include/: lasso.hpp
glmnetpp/include/glmnetpp_bits/: elastic_net_driver.hpp
glmnetpp/include/glmnetpp_bits/core/: as_fit.hpp  as_fit_gaussian.hpp  elastic_net.hpp  elastic_net_config.hpp  elastic_net_gaussian.hpp  elastic_net_impl_default.hpp  elastic_net_output.hpp  lasso.hpp  update_resource.hpp  update_resource_gaussian.hpp
glmnetpp/include/glmnetpp_bits/util/: compressed_matrix.hpp  constant.hpp  eigen_ext.hpp  math.hpp  typedefs.hpp
glmnetpp/include/glmnetpp_bits/util/iterator/: counting_iterator.hpp
glmnetpp/test/: CMakeLists.txt
glmnetpp/test/core/: elastic_net_config_unittest.cpp  lasso_unittest.cpp
glmnetpp/test/core/reference/: lasso_unittest.py
glmnetpp/test/testutil/: base_fixture.hpp  data_util.hpp
glmnetpp/test/testutil/data/: x_data_1.txt  xy_data_1.py  y_data_1.txt
glmnetpp/test/util/: compressed_matrix_unittest.cpp  eigen_ext_unittest.cpp  math_unittest.cpp
